crates/justrdp-derive/tests/ui/missing_attr.stderr
error: field `field` is missing #[pdu(...)] attribute
 --> tests/ui/missing_attr.rs:5:5
  |
5 |     pub field: u8,
  |     ^^^
